FIx contrast error

--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ p {
   border-radius: 0.5rem;
   font-size: 16px;
   font-weight: bolder;
-  color: #6070ff;
+  color: #09090a;
   background-color: #fff;
 }
 
